Fixed Coach width on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,7 +193,8 @@ input[type="radio"] {
 .coach {
 	border: solid #414141;
 	border-width: 5px 3px 5px 3px;
-	width: 150px;
+	min-width: 120px;
+	max-width: 120px;
 	height: 55px;
 	margin-left: -5px;
 	padding-top: 7px;
